--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title><%= title %></title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag "styles" %>
   <%= javascript_include_tag 'jquery-1.4.4.min', 'utilities', 'processing-1.0.0.min', 'application' %>
   <%= csrf_meta_tag %>
 
