more scrubbing for activity and beam with issues found during manual testing

--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -1,6 +1,6 @@
 <div id="display1_header">
   <div class="text-large"><%= image_tag "logo_seti.png" %></div>
-  <div class="text-title-yellow" style="padding-left:25px; width:1150px;">Current Observation Status: <span id="current-observation-id">?</span></div>
+  <div class="text-title-yellow" style="padding-left:25px; width:1150px;">Current Status: <span id="current-observation-id">?</span></div>
   <div class="text-title-yellow">Activity ID: <span id="activity-id">?</span></div>
   <div class="float-wall"></div>
 </div>
