--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -12,7 +12,7 @@
 <div class="divider-horizontal"></div>
 <%= render 'beam', :beam_id => 3 %>
 
-<% javascript_tag do %>
+<%= javascript_tag do %>
   var display1_waterfall_path = '<%= display1_waterfall_path %>';
   var display1_beam_path = '<%= display1_beam_path %>';
   var display1_activity_path = '<%= display1_activity_path %>';
