--- a/app/views/display2/index.html.erb
+++ b/app/views/display2/index.html.erb
@@ -1,8 +1,15 @@
-
 <% content_for(:head) do %>
   <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAddiIMkMAknNU3D5NS1TU4RT2yXp_ZAY8_ufC3CFXhHIE1NvwkxQU01Mn68JTNFGadfavdmyOXKv-bw" type="text/javascript"></script>
   <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <% end %>
+
+<% # Form field for manual testing %>
+<% if ApplicationController::WOS_MANUAL_TESTS == true %>
+   <form id="TestActivityForm" onsubmit="return false;" method="post">
+      <textarea rows="3" cols="70" name="jsonobject" />"Enter Activity JSON object here..." </textarea>
+      <input type="button" value="Submit" onclick="updateActivity(this.form)"/>
+   </form>
+<%end %>
 
 <div id="display2">
   <div id="sky_map"></div>
@@ -29,6 +36,7 @@
   var TIMEOUT_WEATHER = <%= ApplicationController::TIMEOUT_WEATHER %>
   var TIMEOUT_WEBCAM = <%= ApplicationController::TIMEOUT_WEBCAM %>
   var SCREENSIZE_HEIGHT = <%= ApplicationController::SCREENSIZE_HEIGHT %>
+  var WOS_MANUAL_TESTS = <%= ApplicationController::WOS_MANUAL_TESTS %>
 <% end %>
 <%= javascript_include_tag "display2.js" %>
 
