--- a/app/views/display1/_waterfall.html.erb
+++ b/app/views/display1/_waterfall.html.erb
@@ -20,6 +20,6 @@ void drawWaterfallRows(id, start_row, num_rows, data)
     }
   }
 
-  updatePixels(0, 0, width, num_rows);
+  updatePixels(0, start_row, width, start_row + num_rows);
 }
 </script>
