Added QUnit UI tests

--- a/app/views/display1/_beam.html.erb
+++ b/app/views/display1/_beam.html.erb
@@ -8,11 +8,11 @@
 
   <div class="beam_information_center">
     <div>
-      <%= render 'baseline', :baseline_id => beam_id %><br />
+      <%= render '/display1/baseline', :baseline_id => beam_id %><br />
       <div class="beam_description text-small"><!-- Description here --></div>
     </div>
     <div>
-      <%= render 'waterfall', :waterfall_id => beam_id %>
+      <%= render '/display1/waterfall', :waterfall_id => beam_id %>
     </div>
     <div class="float-wall"></div>
   </div>
