Changes to load height of contextual info properly.

--- a/app/views/display2/index.html.erb
+++ b/app/views/display2/index.html.erb
@@ -15,7 +15,7 @@
   <div id="sky_map"></div>
 
   <div id="contextual-info-container">
-    <iframe id="contextual-info" src="http://www.bayareatours.org/test.htm"></iframe>
+    <iframe id="contextual-info" src="/display1/activity_contextual_info"></iframe>
   </div>
   
   <div id="weatherForecast">
